first Lecture's material and prepped lecture notes

--- a/02 Lecture Notes .tex
+++ b/02 Lecture Notes .tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{report}
+\documentclass{article}
 \usepackage{amsmath}
 \usepackage[mathletters]{ucs}
 \usepackage[utf8x]{inputenc}
@@ -60,13 +60,12 @@
 
 \lstset{style=mystyle}
 \author{Oskar Idland}
-\title{FYS2140 - Kvantefysikk}
+\title{02 Lecture Notes}
 \date{}
 \begin{document}
 \maketitle
 \newpage
-\tableofcontents
-\newpage
-\include{Historisk Utvikling}
+
+
 
 \end{document}
