--- a/Historisk Utvikling.tex
+++ b/Historisk Utvikling.tex
@@ -207,3 +207,11 @@ hvor $ν$ er frekvensen til svingningene og $h$ er en universell konstant.
 Kvantefysikken gjelder alltid, men klassisk fysikk kan brukes når energiskalaen er stor nok ettersom det ikke er merkbart. 
 
 \subsection{Utledning av Wiens Forskyvningslov}
+% TODO: Skriv ned det viktigste. 
+
+ \chapter{Lysets Partikkelegenskaper}
+ \section{Fotoelektrisk Effekt}
+ 
+ 
+ \section{Röntgen-Stråling}
+ 
