--- a/latex_test.tex
+++ b/latex_test.tex
@@ -7,8 +7,8 @@
     \ExplSyntaxOff
     \benchmark_tic:
   }
-  
-\documentclass[12pt]{report}
+
+\documentclass{article}
 \usepackage{amsmath}
 \usepackage[mathletters]{ucs}
 \usepackage[utf8x]{inputenc}
@@ -26,13 +26,12 @@
 \usepackage{pythonhighlight} %for pythonkode \begin{python}   \end{python}
 \usepackage{appendix}
 \usepackage{arydshln}
-\usepackage{tikz-cd}
+\usepackage{physics}
 \usepackage{booktabs} 
 \usepackage{adjustbox}
 \usepackage{mdframed}
 \usepackage{relsize}
 \usepackage{physics}
-\usepackage{cancel}
 \usepackage[thinc]{esdiff}
 \usepackage{fixltx2e}
 \usepackage{esint}  %for lukket-linje-integral
@@ -42,10 +41,10 @@
 \usepackage{amssymb} %\mathbb{R} for reelle tall, \mathcal{B} for "matte"-font
 \usepackage{listings} %for kode/lstlisting
 \usepackage{verbatim}
-\usepackage{wrapfig,lipsum,caption} %for wrapping av bilder
+\usepackage{graphicx,wrapfig,lipsum,caption} %for wrapping av bilder
 \usepackage{mathtools} %for \abs{x}
-\usepackage{etoolbox}
 \usepackage[norsk]{babel}
+
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
@@ -70,30 +69,12 @@
 %     showtabs=false,                  
 %     tabsize=2
 % }
-
-% \lstset{style=mystyle}
 \author{Oskar Idland}
-\title{FYS2140 - Kvantefysikk}
+\title{Test}
 \date{}
-\includeonly{05 Forelesnings Notater} 
 \begin{document}
 \maketitle
-\newpage
-\tableofcontents
-\newpage
-\include{Historisk Utvikling}
-\include{Kvantemekanikkens matematiske spraak}
-\include{Andvendelser}
-\part{Forelesning Notater}
 
-\include{02 Forelesnings Notater}
-\include{03 Forelesnings Notater}
-\include{04 Forelesnings Notater}
-\include{05 Forelesnings Notater}
-\include{06 Forelesnings Notater}
-\include{07 Forelesnings Notater}
-\include{08 Forelesnings Notater}
-\include{09 Forelesnings Notater}
-\include{10 Forelesnings Notater}
+Like treg 
 
 \end{document}
